--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,10 +1,11 @@
 .HomePage {
     position: absolute;
-    top: 30px;
+    top:5vmin;
     height: 100vh;
     width: 100vw;
     //background-color: rgb(227,211,166);
     //background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
+    border-top: solid 1px black;
 
     animation: fadeIn 1s;
 
@@ -27,7 +28,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        left: 80vw;
+        left: 81vw;
         top: 15vmin;
         position: absolute;
         width: 20vw;
@@ -35,7 +36,7 @@
         border-radius: 7px;
 
         h4 {
-            color: sblack;
+            color: black;
         }
 
         ul {
@@ -181,11 +182,10 @@
             align-items: center;
 
             ul {
-                height: 5vh;
+                height: 10vmin;
                 overflow-x: scroll;
                 flex-direction: row;
                 width: 100vw;
-                overflow-y: hidden;
 
                 li {
                     display: flex;
@@ -193,7 +193,8 @@
                     align-items: center;
                     overflow-x: hidden;
                     overflow-wrap: normal;
-                    height: 4vh;
+                    height: 5vmin;
+                    width: 20vmin;
                     border-radius: 7px;
                     font-size: 10px;
                     padding: 2px;
@@ -305,5 +306,20 @@
     }
     50% {
         border-color: #000;
+    }
+}
+@keyframes borderHighlightDarkMode {
+    0%, 100% {
+        border-color: #FF6410; /* Initial and final border color */
+    }
+    25% {
+        border-color: white; /* Highlighted border color */
+    }
+    50% {
+        border-color: #FF6410; /* Initial and final border color */
+
+    }
+    75% {
+        border-color: white; /* Highlighted border color */
     }
 }
