--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -12,10 +12,12 @@
     animation: fadeIn 0.5s;
     border-radius: 7px;
     overflow-y: scroll;
+
+    top:10vh;
     ul{
         list-style-type: none;
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         justify-content: flex-start;
 
         width: 65vw;
@@ -31,8 +33,47 @@
             border-radius: 7px;
             height: 60vh;
             margin: 5px;
-            background-color: white;
+
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            section{
+                display: flex;
+                justify-content: space-between;
+
+                height: 10vh;
+                h1{
+                    margin-left: 10px;
+
+                }
+                h2{
+                    margin-right: 10px;
+                    
+
+                }
+            }
+            h3{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 50vh;
+                margin-top: 0;
+                background-color: gray;
+
+            }
+            aside{
+                display: flex;
+                width: 50vw;
+                justify-content: flex-start;
+                p{
+                    margin-left:5px ;
+                    margin-right:5px ;
+                }
+                .like:hover,.dislike:hover,.comment:hover{
+                    color: rgb(171,211,246);
+                }
+            }
         }
     }
 }
@@ -76,8 +117,21 @@
                 width: 80vw;
                 height: 60vh;
                 margin-left: 5vw;
-    
+
                 box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                section{
+                    width:80vw;
+                    height: 5vh;
+                    display: flex;
+                    justify-content: space-between;
+                    h1,h2{
+
+                        font-size: 10px;
+                    }
+                }
+                h3{
+                    width: 80vw;
+                }
 
             }
         }
@@ -94,6 +148,12 @@
             }
             li{
                 background-color: black;
+                section{
+                    h2{
+                        color:#FF6410;
+                    }
+                }
+
                 color:white;
             }
         }
