--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -10,6 +10,8 @@
     height: 100vh;
     background-color: white;
     margin-top: 0vmin;
+    border-top: solid 1px black;
+
     h3{
         width: 100vw;
         display: flex;
