--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -8,19 +8,19 @@
     width: 100vw;
     animation: fadeIn 1s;
     height: 200vh;
-    
+
     background-size: cover;
     overflow-y: scroll;
     
     header{
-        
+
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         color: black;
         width: 100vw;
-        height: 41vh;
+        height: 30vh;
         h1{
             color: black;
         }
@@ -28,7 +28,7 @@
         h3{}
         h4{}
         section{
-            
+           top: 40vh; 
             display: flex;
             justify-content: space-evenly;
             width: 100vw;
@@ -44,25 +44,88 @@
 
         
     }
-    .noPost{
-        font-size: 25px;
-        color: white;
-    }
     ul{
+        top:20vh;
+        background-color: lightgrey;
         animation: fadeIn 2s;
         list-style-type: none;
         position: relative;
         overflow-y: scroll;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         border-radius: 7px;
-        padding: 50px;
+        display: flex;
+        flex-direction: column-reverse;
+        width: 90vw;
+        border: solid 1px ;
+        align-items: center;
 
-        width: 80vw;
         li{
-            color:white;
-            width: 80vw;
+
+            background-color: white;
+            padding-right: 40px;
+            box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+            height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            margin-bottom: 15px;
+            align-items: center;
+            width: 85vw;
+            section{
+                display: flex;
+                justify-content: space-between;
+
+                height: 10vh;
+                width: 85vw;
+                align-items: center;
+                h1{
+                    color: rgb(171,211,246);
+                    padding-right: 10px;
+                }
+                h2{
+                    padding-left: 10px;
+
+
+                }
+            }
+            h3{
+                margin-left: 2vw;
+                margin-top: 0;
+                height: 50vh;
+                width: 85vw;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: gray;
+                border: solid 2px black;
+                border-radius: 7px;
+            }
+            h3:hover{
+                padding: 10px;
+                transition: 3s;
+                border-radius: 7px;
+                animation: borderHighlight 3s infinite; 
+            }
+            aside{
+                display: flex;
+                width: 80vw;
+                justify-content: flex-start;
+                p{
+                    margin-left:5px ;
+                    margin-right:5px ;
+                }
+                .like:hover,.dislike:hover,.comment:hover{
+                    color: rgb(171,211,246);
+                }
+            }
+
         }
     }
+    .noPost{
+        font-size: 25px;
+        color: white;
+    }
+    
     .postToForum{
         width: 100vw;
         height: 100vh;
@@ -118,22 +181,21 @@
 
 @media(max-width:900px){
     .ForumPage{
-        background-color: white;
         width: 100vw;
-        height: 100vh;
+        height: 140vh;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
         color:black;
-        position: fixed;
+
         top:0;
         header{
     
             padding: 10px;
             padding-left: 5vw;
             width: 100vw;
-            height: 100vh;
+            height: 30vh;
             h1{}
             h2{}
             h3{}
@@ -150,6 +212,7 @@
             
         }
         ul{
+
             width: 80vw;
             height: 100vh;
             overflow-y: scroll;
@@ -158,7 +221,12 @@
             padding: 50px;
     
             li{
-    
+                width: 90vw;
+                padding-right:0 ;
+                h3{
+                    width: 85vw;
+
+                }
             }
         }
     }
@@ -166,7 +234,6 @@
 
 @media (prefers-color-scheme:dark) {
     .ForumPage{
-        background-color: black;
         header{
             //box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
             color: #FF6410;
@@ -174,25 +241,51 @@
                 color: #FF6410;
             }
             h2,h3{
-            color: white;
-
+                color: white;
+                
             }
-
+            
             section{
-                background-color: #FF1100;
-            button{
-                background-color: #FF6410;
-                border-radius: 7px;
-                padding: 2px;
-            }
-
-            }
-            ul{
-                li{
-                    margin: 10px;
+                background-color:lightgray;
+                button{
+                    background-color: #FF6410;
+                    border-radius: 7px;
+                    padding: 2px;
                 }
                 
             }
+            
+        }
+        ul{
+
+            li{
+                background-color: black;
+                section{
+    
+                    width: 85vw;
+                    h1{
+                    }
+                    h2{
+    
+    
+                    }
+                }
+                h3{
+                }
+                h3:hover{
+                    animation: borderHighlightDarkMode 3s infinite; 
+                }
+                aside{
+                    p{
+                        
+                    }
+                    .like:hover,.dislike:hover,.comment:hover{
+                        color: #FF6410;
+                    }
+                }
+    
+            }
+            
         }
         .postToForum{
     
@@ -225,3 +318,34 @@
     0% { opacity: 0; }
     100% { opacity: 1; }
   }
+  @keyframes borderHighlight {
+    0%, 100% {
+        border-color: rgb(180, 217, 247); /* Initial and final border color */
+    }
+    25% {
+        border-color: white; /* Highlighted border color */
+    }
+    50% {
+        border-color: rgb(180, 217, 247); /* Initial and final border color */
+
+    }
+    75% {
+        border-color: white; /* Highlighted border color */
+    }
+}
+
+@keyframes borderHighlightDarkMode {
+    0%, 100% {
+        border-color: #FF6410; /* Initial and final border color */
+    }
+    25% {
+        border-color: white; /* Highlighted border color */
+    }
+    50% {
+        border-color: #FF6410; /* Initial and final border color */
+
+    }
+    75% {
+        border-color: white; /* Highlighted border color */
+    }
+}
