--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -1,27 +1,21 @@
-.UserPosts{
+    ul {
+        height: 90vh;
+        position: absolute;
+        border-radius: 7px;
+        top: 10vh;
+        animation: fadeIn 0.5s;
+        overflow-y: scroll;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+        left: 25vw;
 
-    position: absolute;
-    right: 5vw;
-    width: 70vw;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    margin: 5px;
-    animation: fadeIn 0.5s;
-    border-radius: 7px;
-    overflow-y: scroll;
-
-    top:10vh;
-    ul{
         list-style-type: none;
         display: flex;
         flex-direction: column-reverse;
         justify-content: flex-start;
+        align-items: center;
+        width: 70vw;
 
-        width: 65vw;
-        .yourPosts{
+        .yourPosts {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -29,134 +23,231 @@
             height: 10vh;
             color: black;
         }
-        li{
+
+        li {
+
             border-radius: 7px;
             height: 60vh;
-            margin: 5px;
-
+            margin-top: 20px;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            section{
+            width: 65vw;
+
+            section {
+                border-radius: 7px;
+
                 display: flex;
                 justify-content: space-between;
-
+                align-items: center;
+                width: 65vw;
                 height: 10vh;
-                h1{
+
+                h4 {
+                    justify-self: flex-end;
                     margin-left: 10px;
 
                 }
-                h2{
+
+                h2 {
+                    justify-self: flex-start;
                     margin-right: 10px;
-                    
+
 
                 }
             }
-            h3{
+
+            h3 {
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 height: 50vh;
                 margin-top: 0;
                 background-color: gray;
-
+                border: solid 2px black;
+                border-radius: 7px;
             }
-            aside{
+
+            h3:hover {
+                padding: 10px;
+                transition: 3s;
+                border-radius: 7px;
+                animation: borderHighlight 3s infinite;
+            }
+
+            aside {
                 display: flex;
-                width: 50vw;
+                width: 55vw;
                 justify-content: flex-start;
-                p{
-                    margin-left:5px ;
-                    margin-right:5px ;
+                padding-left: 40px;
+
+                p {
+                    margin-left: 5px;
+                    margin-right: 5px;
                 }
-                .like:hover,.dislike:hover,.comment:hover{
-                    color: rgb(171,211,246);
+
+                .like:hover,
+                .dislike:hover,
+                .comment:hover {
+                    color: rgb(171, 211, 246);
                 }
             }
         }
     }
-}
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-  }
 
-@media (max-width:900px) {
-    .UserPosts{
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
 
-        position: absolute;
-        top: 40vh;
-        width: 90vw;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
+        100% {
+            opacity: 1;
+        }
+    }
 
+    @media (max-width:900px) {
+        .UserPosts {
 
-        ul{
+            position: absolute;
+            top: 40vh;
             width: 90vw;
-
+            height: 100vh;
             display: flex;
-            justify-content: flex-start;
             flex-direction: column;
-            align-items: flex-start;
-            list-style-type: none;
+            align-items: center;
+            justify-content: flex-start;
 
-            .yourPosts{
-                justify-self: flex-start;
-                width: 80vw;
-                height: 5vh;
-            }
-            li{
+
+            ul {
+                width: 90vw;
 
                 display: flex;
+                justify-content: flex-start;
                 flex-direction: column;
-                align-items: center;
-                width: 80vw;
-                height: 60vh;
-                margin-left: 5vw;
+                align-items: flex-start;
+                list-style-type: none;
 
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-                section{
-                    width:80vw;
-                    height: 5vh;
-                    display: flex;
-                    justify-content: space-between;
-                    h1,h2{
-
-                        font-size: 10px;
-                    }
-                }
-                h3{
+                .yourPosts {
+                    justify-self: flex-start;
                     width: 80vw;
+                    height: 5vh;
                 }
 
+                li {
+
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 80vw;
+                    height: 60vh;
+                    margin-left: 5vw;
+
+                    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+                    section {
+                        width: 80vw;
+                        height: 5vh;
+                        display: flex;
+                        justify-content: space-between;
+
+                        h1,
+                        h2 {
+
+                            font-size: 10px;
+                        }
+                    }
+
+                    h3 {
+                        width: 80vw;
+                    }
+
+                }
             }
         }
     }
-}
 
-@media (prefers-color-scheme:dark) {
-    .UserPosts{
-        ul{
+    @media (prefers-color-scheme:dark) {
+        ul {
+            .yourPosts {
 
-            .yourPosts{
-                background-color: rgb(28,28,28);
-                color: #FF6410;
             }
-            li{
-                background-color: black;
-                section{
-                    h2{
-                        color:#FF6410;
+            li {
+                background-color: rgb(28,28,28);
+                section {
+                    h4 {
+
+                    }
+                    h2 {
+
                     }
                 }
+                h3 {
+                }
+                h3:hover {
+                    animation: borderHighlightDarkMode 3s infinite;
+                }
+                aside {
+                    p {
 
-                color:white;
+                    }
+                    .like:hover,
+                    .dislike:hover,
+                    .comment:hover {
+                        color: #FF6410;
+                    }
+                }
             }
         }
-    
-}
-}
+
+    }
+
+    @keyframes borderHighlight {
+
+        0%,
+        100% {
+            border-color: rgb(180, 217, 247);
+            /* Initial and final border color */
+        }
+
+        25% {
+            border-color: white;
+            /* Highlighted border color */
+        }
+
+        50% {
+            border-color: rgb(180, 217, 247);
+            /* Initial and final border color */
+
+        }
+
+        75% {
+            border-color: white;
+            /* Highlighted border color */
+        }
+    }
+
+    @keyframes borderHighlightDarkMode {
+
+        0%,
+        100% {
+            border-color: #FF6410;
+            /* Initial and final border color */
+        }
+
+        25% {
+            border-color: white;
+            /* Highlighted border color */
+        }
+
+        50% {
+            border-color: #FF6410;
+            /* Initial and final border color */
+
+        }
+
+        75% {
+            border-color: white;
+            /* Highlighted border color */
+        }
+    }
