--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top:5vmin;
+    top:32px;
     align-items: center;
     background-size: cover;
     width: 100vw;
