--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -3,9 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top:5vmin;
+    top:32px;
     align-items: center;
-    width: 100vw;
     position: fixed;
     height: 100vh;
     background-color: white;
@@ -16,8 +15,8 @@
     // background-size: cover;
     
     .heading{
-        padding-left: 50vw;
         width: 100vw;
+        padding-left: 25vw;
 
     }
     
@@ -36,7 +35,7 @@
 @media (prefers-color-scheme:dark) {
     .UserPage{
 
-        background-color: rgb(33, 33, 33);
+        background-color: black;
 
     }
 }
