bro wtf is up with css it was all fine then everything got messed up but looks allg now except forum page

--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -12,6 +12,8 @@
         list-style-type: none;
         animation: fadeIn 0.5s;
         left: 22.5vw;
+        overflow-y: scroll;
+        height: 80vh;
         li{
             background-color: white;
             padding-right: 40px;
