--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -1,4 +1,4 @@
-    ul {
+    .UserPosts {
         height: 90vh;
         position: absolute;
         border-radius: 7px;
@@ -7,7 +7,6 @@
         overflow-y: scroll;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         left: 25vw;
-
         list-style-type: none;
         display: flex;
         flex-direction: column-reverse;
