--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -12,22 +12,19 @@
         list-style-type: none;
         animation: fadeIn 0.5s;
         left: 22.5vw;
-        overflow-y: scroll;
-        height: 80vh;
         li{
             background-color: white;
-            padding-right: 40px;
             box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-            height: 60vh;
+            height: 70vh;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             margin-bottom: 7.5px;
             margin-top: 7.5px;
             align-items: center;
-            width: 56vw;
+            width: 55vw;
             border-radius: 7px;
-            padding-right: 30px;
+            margin-right: 30px;
             
             section{
                 display: flex;
@@ -121,10 +118,12 @@
        }
 }
 @media (prefers-color-scheme:dark) {
-    .HomePosts{
         // box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+
         ul{
+
             li{
+
                 background-color: rgb(28,28,28);
                 section{
     
@@ -152,7 +151,7 @@
             }
             
         }
-    }
+    
     
 }
 
