--- a/src/components/PostCard/PostCard.module.scss
+++ b/src/components/PostCard/PostCard.module.scss
@@ -6,13 +6,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 10;
+    z-index: 1;
     overflow-y:visible ;
+    background-color: rgba(255, 255, 255, 0.5); /* Adjust the alpha value for transparency */
+    backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
+
     .card{
         background-color: white;
         border-radius: 7px;
         border:  solid black 2px;
         height: 60vh;
+        animation: fadeIn 1s;
         p{
             font-size: 25px;
             padding-left: 30px;
@@ -31,10 +35,15 @@
                 height: 5vh;
                 width: 60vw;
                 display: flex;
-                justify-content: space-around;
+                justify-content: space-between;
                 align-items: center;
-                h1{}
-                h2{}
+                h1{
+                    padding-left: 10px;
+                }
+                h2{
+                    
+                    margin-right: 10px;
+                }
                 
             }
         }
@@ -68,7 +77,17 @@
             }
             
             .comments{
-                height: 10vh;
+                height: 5vh;
+                padding-left: 10px;
+                .addComment{
+                    input{
+
+                        width: 40vw;
+                    }
+                    button{
+                        width:10vw;
+                    }
+                }
             }
         }
     }
@@ -104,26 +123,38 @@
 @media (prefers-color-scheme:dark) {
     .PostCard{
         color:white;
-        header{
+        .card{
+            background-color: rgb(28,28,28);
             p{
-                background-color: orange;
             }
-            .titlesSection{
-                h1{}
-                h2{}
-            }
-        }
-        section{
-            aside{
-                p{
-    
+            header{
+                
+                .titlesSection{
+                    background-color: white;
+                    h1{
+                    }
+                    h2{
+                        color:black;
+                    }
                 }
             }
-            .content{}
-            .comments{
-    
+            .content{
+            }
+            section{
+                background-color: rgb(28,28,28);
+                aside{
+                    p{
+                    }
+                }
+                .comments{
+                }
             }
         }
-    }
-    
+        }
+        
 }
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
