--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -13,7 +13,7 @@
         justify-content: flex-start;
         align-items: center;
         width: 70vw;
-
+        
         .yourPosts {
             display: flex;
             justify-content: center;
@@ -22,8 +22,9 @@
             height: 10vh;
             color: black;
         }
-
+        
         li {
+            //animation: fadeIn 1s;
 
             border-radius: 7px;
             height: 60vh;
