PostPage is Liveee and addComment API call works but why am i only seeing only one comment in the li

--- a/src/components/PostModal/PostModal.module.scss
+++ b/src/components/PostModal/PostModal.module.scss
@@ -1,10 +1,15 @@
 .PostModal{
+    position: absolute;
     width: 100vw;
     height: 100vh;
+    margin-left: 0;
     z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(255, 255, 255, 0.5); /* Adjust the alpha value for transparency */
+    backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
+    animation: fadeIn 1s;
     section{
         
         animation: fadeIn 0.5s;
