--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -10,6 +10,9 @@
     justify-content: center;
     align-items: center;
     animation: fadeIn 0.5s;
+    background-color: rgba(255, 255, 255, 0.5); /* Adjust the alpha value for transparency */
+    backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
+
 
     h1{
         margin-top: 0;
