--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -77,6 +77,13 @@
             margin-bottom: 15px;
             align-items: center;
             width: 85vw;
+            border: solid 2px black;
+            li:hover{
+                padding: 20px;
+                transition: 3s;
+                border-radius: 7px;
+                animation: borderHighlight 3s infinite; 
+            }
             section{
                 display: flex;
                 justify-content: space-between;
@@ -103,15 +110,9 @@
                 justify-content: center;
                 align-items: center;
                 background-color: gray;
-                border: solid 2px black;
                 border-radius: 7px;
             }
-            h3:hover{
-                padding: 10px;
-                transition: 3s;
-                border-radius: 7px;
-                animation: borderHighlight 3s infinite; 
-            }
+            
             aside{
                 display: flex;
                 width: 80vw;
@@ -267,6 +268,10 @@
             z-index: -1;
             li{
                 background-color: black;
+            }
+            li:hover{
+                animation: borderHighlightDarkMode 3s infinite; 
+            }
                 section{
     
                     width: 85vw;
@@ -276,10 +281,7 @@
                     }
                 }
                 h3{
-                }
-                h3:hover{
-                    animation: borderHighlightDarkMode 3s infinite; 
-                }
+              
                 aside{
                     p{
                     }
