--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -1,6 +1,6 @@
     ul{
         position: absolute;
-        top:10vmin;
+        top:15vmin;
         width: 55vw;
         border-radius: 7px;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
@@ -11,7 +11,9 @@
         justify-content: flex-start;
         list-style-type: none;
         animation: fadeIn 0.5s;
-        left: 22.5vw;
+        height: 80vh;
+        overflow-y:scroll;
+        left: 21vw;
         li{
             background-color: white;
             box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
@@ -25,7 +27,7 @@
             width: 55vw;
             border-radius: 7px;
             margin-right: 30px;
-            
+            border: solid white;
             section{
                 display: flex;
                 justify-content: space-between;
@@ -51,7 +53,7 @@
                 justify-content: center;
                 align-items: center;
                 background-color: gray;
-                border: solid 2px black;
+                border: solid 2px white;
                 border-radius: 7px;
             }
             h3:hover{
@@ -75,7 +77,8 @@
 
         }
         li:hover{
-
+            padding: 10px;
+            transition: 3s;
             border-radius: 7px;
             animation: borderHighlight 3s infinite; 
         }
@@ -123,8 +126,10 @@
         ul{
 
             li{
-
                 background-color: rgb(28,28,28);
+                border: solid 1px black;
+             
+                
                 section{
     
                     width: 85vw;
@@ -148,6 +153,12 @@
                     }
                 }
     
+            }
+            li:hover{
+                padding: 10px;
+                transition: 3s;
+                border-radius: 7px;
+                animation: borderHighlightDarkMode 3s infinite; 
             }
             
         }
