--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -8,7 +8,8 @@
     justify-content: center;
     align-items: center;
     font-size: 1vmin;
-    
+    color: black;
+    animation: fadeIn 2s;
     .title{
         justify-self: center;
         font-family: 'Orbitron', sans-serif;
@@ -114,4 +115,14 @@
         }
     }
  }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
