--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -24,8 +24,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
+        //box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+        box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
         width: 15vw;
         height: 15vw;
         border-radius: 90px;
