--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -10,7 +10,7 @@
         list-style-type: none;
         display: flex;
         flex-direction: column-reverse;
-        justify-content: flex-start;
+        justify-content: flex-end;
         align-items: center;
         width: 70vw;
         
@@ -79,9 +79,9 @@
 
             aside {
                 display: flex;
-                width: 55vw;
+                width: 65vw;
                 justify-content: flex-start;
-                padding-left: 40px;
+                padding-left: 10px;
 
                 p {
                     margin-left: 5px;
