--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -17,6 +17,12 @@
         display: flex;
         margin: 5px;
         padding-left:10vw;
+        color: transparent;
+        background: rgb(180,217,247);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
     }
 }
 
