--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -24,7 +24,12 @@
         width: 100vw;
         height: 30vh;
         h1{
-            color: black;
+            color: transparent;
+            background: rgb(180,217,247);
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            background-clip: text;
+            text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
         }
         h2{}
         h3{}
