--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     z-index: 1;
     margin-left: 0;
-
+    top:-140px;
     display: flex;
     flex-direction: column;
     justify-content: center;
