--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -38,5 +38,13 @@
     .ChatsPage{
         background-color: rgb(33,33,33);
         color: #FF6410;
+        h3{
+            color: transparent;
+            background: #FF6410;
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            background-clip: text;
+            text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+        }
     }
 }
