--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -42,6 +42,14 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
     .UserPage{
 
         background-color: black;
+        .heading{
+            color: transparent;
+            background: #FF6410;
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            background-clip: text;
+            text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+        }
 
     }
 }
