--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -109,7 +109,7 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
         border-radius: 7px;
 
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
+       
         .userPic {
             box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
             margin-top: 5vmin;
@@ -125,16 +125,20 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
         }
 
         .username {
-            padding: 10px;
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .userForums {
             overflow-y: scroll;
-            margin-left: 2vw;
             left: 0;
-            position: absolute;
+            margin-top:20vh;
+
+            margin-left: 2vw;
             padding: 10px;
-            top:35vmin;
+
             width: 10vw;
             height: 30vh;
 
@@ -293,10 +297,10 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
         .userInfo {
             color: #FF6410;
             background-color: rgb(28, 28, 28);
-
             .userPic {
                 border: solid 1px white;
             }
+
         }
     }
 }
