added a searchbar css

--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -127,7 +127,9 @@
                 width: 75vw;
                 margin-bottom: 10px;
                 border-radius: 7px;
-
+                background-color: grey;
+                color: white;
+                margin: 5px;
             }
 
             button {
