--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -57,10 +57,8 @@
                 border-radius: 7px;
             }
             h3:hover{
-                padding: 10px;
-                transition: 3s;
+                transition: 0.1s;
                 border-radius: 7px;
-                animation: borderHighlight 3s infinite; 
             }
             aside{
                 display: flex;
@@ -77,10 +75,10 @@
 
         }
         li:hover{
-            padding: 10px;
-            transition: 3s;
+            padding: 7px;
+            transition: 0.1s;
             border-radius: 7px;
-            animation: borderHighlight 3s infinite; 
+
         }
     }
 
@@ -128,8 +126,9 @@
             li{
                 background-color: rgb(28,28,28);
                 border: solid 1px black;
-             
                 
+             
+                border-color: white;
                 section{
     
                     width: 85vw;
@@ -137,13 +136,13 @@
                     h1{
                     }
                     h2{
-                        color:white;
                     }
                 }
                 h3{
                 }
-                h3:hover{
-                    animation: borderHighlightDarkMode 3s infinite; 
+                h3:hover{ 
+                    padding: 7px;
+                    transition: 0.1s;
                 }
                 aside{
                     p{
@@ -152,48 +151,15 @@
                         color: #FF6410;
                     }
                 }
-    
+                
             }
             li:hover{
-                padding: 10px;
-                transition: 3s;
+                padding: 7px;
+                transition: 0.1s;
                 border-radius: 7px;
-                animation: borderHighlightDarkMode 3s infinite; 
             }
             
         }
     
     
-}
-
-@keyframes borderHighlight {
-    0%, 100% {
-        border-color: rgb(180, 217, 247); /* Initial and final border color */
-    }
-    25% {
-        border-color: white; /* Highlighted border color */
-    }
-    50% {
-        border-color: rgb(180, 217, 247); /* Initial and final border color */
-
-    }
-    75% {
-        border-color: white; /* Highlighted border color */
-    }
-}
-
-@keyframes borderHighlightDarkMode {
-    0%, 100% {
-        border-color: #FF6410; /* Initial and final border color */
-    }
-    25% {
-        border-color: white; /* Highlighted border color */
-    }
-    50% {
-        border-color: #FF6410; /* Initial and final border color */
-
-    }
-    75% {
-        border-color: white; /* Highlighted border color */
-    }
 }
