--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -12,6 +12,17 @@
     // background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
     // background-size: cover;
 
+    display: flex;
+    justify-content: center;
+
+    width: 100vw;
+
+background: rgb(180,217,247);
+-webkit-background-clip: text;
+-moz-background-clip: text;
+background-clip: text;
+text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+
     h1{
         font-size: 30px;
         width: 100vw;
@@ -70,6 +81,15 @@
 @media (prefers-color-scheme:dark) {
     .NavBarDiv{
         background-color: rgb(28,28,28);
+        .Name {
+            color: transparent;
+            background: #FF6410;
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            background-clip: text;
+            text-shadow: 0px 3px 3px rgba(166, 39, 39, 0.5);
+        }
+        
         section{
 
             p{
