--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -141,11 +141,13 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
 
             width: 10vw;
             height: 30vh;
-
+            
             li{
-                margin-left: 2vw;
+                color: black;
                 width: 8vw;
-                color: green
+                margin-left: 2vw;
+            }
+            .forumTitles{
             }
         }
     }
@@ -268,43 +270,61 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
 @media (prefers-color-scheme:dark) {
     .HomePage {
 
-        .Name {
-            display: flex;
 
-            color: transparent;
-            background: #FF6410;
-            -webkit-background-clip: text;
-            -moz-background-clip: text;
-            background-clip: text;
-            text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
-            left: 0;
-            margin-left: 0;
-        }
+            h4 {
 
-        background-color: black;
-
+                    }
+    
         .buttonDiv {
-            background-color: rgb(28, 28, 28);
-            color: #FF6410;
+    
+            li {
 
-            button {}
-
-            ul {
-                background-color: (10, 10, 10);
+    
             }
         }
+    
+        button {
 
+    
+        }
+    
+    
+        #name {
+            
+        }
+        
+        .hidden {
+            
+        }
+        
         .userInfo {
             color: #FF6410;
-            background-color: rgb(28, 28, 28);
+           
             .userPic {
-                border: solid 1px white;
+
+    
+        
             }
+    
+            .username {
+            }
+            
+            .userForums {
+                h4{
+                    color: white;
+                }
+                
+                li{
 
+
+                }
+                .forumTitles{
+                    color: white;
+                }            }
         }
+    
     }
-}
-
+        }
 
 @keyframes typing {
     from {
@@ -317,12 +337,10 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
 }
 
 @keyframes blink-caret {
-
     from,
     to {
         border-color: transparent;
     }
-
     50% {
         border-color: #000;
     }
@@ -336,8 +354,7 @@ text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
         /* Initial and final border color */
     }
 
-    25% {
-        border-color: white;
+    25% {        border-color: white;
         /* Highlighted border color */
     }
 
